# torchcrepeV2

./: .gitignore  LICENSE  README.md  core.py  model_load_test.py  pyproject.toml  setup.cfg  setup.py  test_example.py  utils.py
tests/: test_torchcrepe.py
tests/test_audio/: vital_test_pluck_1_f0.npy
torchcrepeV2/: __init__.py  convert_h5_to_pt.py  core.py  crepe_model.py  test_example.py  utils.py  version.py
