[project]
name = "torchcrepeV2"
version = "0.1.2"
authors = [
  { name="Hao Hao Tan", email="helloharry66@gmail.com" },
]
description = "Crepe pitch detection in PyTorch"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'tensorflow',
  'torch',
  'numpy',
  'crepe==0.0.12',
  'librosa==0.9.1'
]

[project.urls]
"Homepage" = "https://github.com/gudgud96/torchcrepeV2"