[metadata]
name = torchcrepeV2
version = attr: torchcrepeV2.version.version
description = Yet another crepe (pitch tracking tool) in PyTorch.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/gudgud96/torchcrepeV2
author = Hao Hao Tan
author_email = helloharry66@gmail.com

[options]
packages = find:
include_package_data = True
install_requires =
    librosa 
    torch
    hmmlearn
    numpy 
    onnxruntime
    onnx

python_requires = >=3.7

[options.package_data]
* = assets/crepe_model.onnx
